library/aws/security_groups/instances/nodes/security_group_instances_nodes.tf
resource "aws_security_group" "kontena_nodes" {
  name = "${var.name}-kontena-nodes"
  tags = {
    Name = "${var.name}-kontena-nodes"
  }

  vpc_id = "${aws_vpc.kontena.id}"

  ingress {
    from_port = 0
    to_port   = 0
    protocol  = -1
    self      = true
  }

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 80
    to_port   = 80
    protocol  = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 443
    to_port   = 443
    protocol  = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 1194
    to_port   = 1194
    protocol  = "udp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  /*ingress {
    from_port = 6783
    to_port   = 6783
    protocol  = "tcp"
    self = true
  }

  ingress {
    from_port = 6783
    to_port   = 6784
    protocol  = "udp"
    self = true
  }*/

  ingress {
    from_port = 8
    to_port = 0
    protocol = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
